--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "https://github.com/atask/wa-dumps#readme",
   "dependencies": {
+    "promiseproxy-node": "^1.0.0",
     "swearing": "^1.0.1",
     "wa-snap": "^0.2.0"
   },
